# QuitMathCompanion

./: README.md
backend/: pyproject.toml
backend/quitmath_backend/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/quitmath_backend/routers/: auth.py  cravings.py  eco.py  rl.py  tasks.py
backend/quitmath_backend/services/: eco_impact.py  markov_model.py  ode_engine.py  rl_scheduler.py
mobile/QuitMathApp/: app.json  package.json  tsconfig.json
mobile/QuitMathApp/src/: App.tsx
mobile/QuitMathApp/src/navigation/: index.tsx
mobile/QuitMathApp/src/screens/: HomeScreen.tsx
mobile/QuitMathApp/src/state/: store.ts
qpudatashards/particles/: QuitAidAirEcoPhoenix2026v1.csv
