[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quitmath-backend"
version = "0.1.0"
description = "Quit-Math Companion backend: ODE craving engine, Markov/RL scheduler, eco-impact ledger."
authors = [
  { name = "QuitMath Contributors" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "alembic>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quitmath_backend*"]
